<resources>
    <string name="app_name">Calculator App</string>
    <string name="botonSiete">7</string>
    <string name="botonOcho">8</string>
    <string name="botonNueve">9</string>
    <string name="botonCuatro">4</string>
    <string name="botonCinco">5</string>
    <string name="botonSeis">6</string>
    <string name="botonUno">1</string>
    <string name="botonDos">2</string>
    <string name="botonTres">3</string>
    <string name="botonCero">0</string>
    <string name="botonMas">+</string>
    <string name="botonMenos">-</string>
    <string name="botonPor">*</string>
    <string name="botonDivision">/</string>
    <string name="botonIgual">=</string>
    <string name="display">0</string>
    <string name="display2">0</string>
    <string name="display3">Mem: 0</string>
    <string name="botonMC">MC</string>
    <string name="BotonMemMas">Mem+</string>
    <string name="botonMemMenos">Mem-</string>
    <string name="botonInverso">1/X</string>
    <string name="botonStore">Store</string>
    <string name="botonRecall">Recall</string>
    <string name="botonXn">xⁿ</string>
    <string name="boton10n">10ⁿ</string>
    <string name="botonSin">sin</string>
    <string name="botonCos">cos</string>
    <string name="botonRaizn">ⁿ√</string>
    <string name="botonRaiz">√</string>
    <string name="botonCE">CE</string>
    <string name="botonBorrarUltimoCaracter">⌫</string>
    <string name="botonCambioSigno">+/-</string>
    <string name="botonPi">𝛑</string>
    <string name="botonPuntoDecimal">.</string>
    <string name="opcionSwitch">Cambiar a grados</string>
</resources>