<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/display"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.899"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botonSiete"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:backgroundTint="#2196F3"
        android:onClick="onPressedButton"
        android:text="@string/botonSiete"
        tools:ignore="MissingConstraints,UsingOnClickInXml"
        tools:layout_editor_absoluteX="12dp"
        tools:layout_editor_absoluteY="394dp" />


    <Button
        android:id="@+id/botonOcho"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:backgroundTint="#2196F3"
        android:onClick="onPressedButton"
        android:text="@string/botonOcho"
        tools:ignore="UsingOnClickInXml"
        tools:layout_editor_absoluteX="111dp"
        tools:layout_editor_absoluteY="394dp" />

    <Button
        android:id="@+id/botonNueve"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:backgroundTint="#2196F3"
        android:onClick="onPressedButton"
        android:text="@string/botonNueve"
        tools:ignore="UsingOnClickInXml"
        tools:layout_editor_absoluteX="215dp"
        tools:layout_editor_absoluteY="394dp" />

    <Button
        android:id="@+id/botonCuatro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#E91E63"
        android:onClick="onPressedButton"
        android:text="@string/botonCuatro"
        tools:ignore="MissingConstraints,UsingOnClickInXml"
        tools:layout_editor_absoluteX="12dp"
        tools:layout_editor_absoluteY="442dp" />

    <Button
        android:id="@+id/botonCinco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#E91E63"
        android:onClick="onPressedButton"
        android:text="@string/botonCinco"
        tools:ignore="UsingOnClickInXml"
        tools:layout_editor_absoluteX="111dp"
        tools:layout_editor_absoluteY="444dp" />

    <Button
        android:id="@+id/botonSeis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#E91E63"
        android:onClick="onPressedButton"
        android:text="@string/botonSeis"
        tools:ignore="UsingOnClickInXml"
        tools:layout_editor_absoluteX="215dp"
        tools:layout_editor_absoluteY="444dp" />

    <Button
        android:id="@+id/botonUno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:onClick="onPressedButton"
        android:text="@string/botonUno"
        tools:ignore="MissingConstraints,UsingOnClickInXml"
        tools:layout_editor_absoluteX="12dp"
        tools:layout_editor_absoluteY="490dp" />

    <Button
        android:id="@+id/botonDos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:onClick="onPressedButton"
        android:text="@string/botonDos"
        tools:ignore="UsingOnClickInXml"
        tools:layout_editor_absoluteX="111dp"
        tools:layout_editor_absoluteY="492dp" />

    <Button
        android:id="@+id/botonTres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:onClick="onPressedButton"
        android:text="@string/botonTres"
        tools:ignore="UsingOnClickInXml"
        tools:layout_editor_absoluteX="212dp"
        tools:layout_editor_absoluteY="493dp" />

    <Button
        android:id="@+id/botonCero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:onClick="onPressedButton"
        android:text="@string/botonCero"
        tools:ignore="MissingConstraints,UsingOnClickInXml"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="541dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF5722"
        android:text="@string/botonIgual"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="313dp"
        tools:layout_editor_absoluteY="541dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3F51B5"
        android:onClick="operacionPresionado"
        android:text="@string/botonDivision"
        tools:layout_editor_absoluteX="310dp"
        tools:layout_editor_absoluteY="349dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3F51B5"
        android:onClick="operacionPresionado"
        android:text="@string/botonMas"
        tools:layout_editor_absoluteX="313dp"
        tools:layout_editor_absoluteY="445dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3F51B5"
        android:onClick="operacionPresionado"
        android:text="@string/botonMenos"
        tools:layout_editor_absoluteX="313dp"
        tools:layout_editor_absoluteY="490dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3F51B5"
        android:onClick="operacionPresionado"
        android:text="@string/botonPor"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="315dp"
        tools:layout_editor_absoluteY="397dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="."
        tools:layout_editor_absoluteX="209dp"
        tools:layout_editor_absoluteY="541dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+/-"
        tools:layout_editor_absoluteX="215dp"
        tools:layout_editor_absoluteY="346dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="⌫ "
        tools:layout_editor_absoluteX="111dp"
        tools:layout_editor_absoluteY="345dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="√"
        tools:layout_editor_absoluteX="315dp"
        tools:layout_editor_absoluteY="297dp" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="sin"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="297dp" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="cos"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="297dp" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1/X"
        tools:layout_editor_absoluteX="310dp"
        tools:layout_editor_absoluteY="194dp" />

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10ⁿ"
        tools:layout_editor_absoluteX="310dp"
        tools:layout_editor_absoluteY="242dp" />

    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="xⁿ"
        tools:layout_editor_absoluteX="219dp"
        tools:layout_editor_absoluteY="242dp" />

    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ⁿ√"
        tools:layout_editor_absoluteX="215dp"
        tools:layout_editor_absoluteY="297dp" />

    <Button
        android:id="@+id/button17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Store"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="242dp" />

    <Button
        android:id="@+id/button18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Recall"
        tools:layout_editor_absoluteX="122dp"
        tools:layout_editor_absoluteY="242dp" />

    <Button
        android:id="@+id/button19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mem +"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="189dp" />

    <Button
        android:id="@+id/button20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mem -"
        tools:layout_editor_absoluteX="222dp"
        tools:layout_editor_absoluteY="194dp" />

    <Button
        android:id="@+id/button21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MC"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="189dp" />

    <Button
        android:id="@+id/button22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="𝛑"
        tools:layout_editor_absoluteX="12dp"
        tools:layout_editor_absoluteY="541dp" />

    <Button
        android:id="@+id/button23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CA"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="345dp" />


</androidx.constraintlayout.widget.ConstraintLayout>